--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-cat > .gitignore << EOF
-.DS_Store
+# Python
 __pycache__/
 *.pyc
-db.sqlite3
+
+# Django
+*.sqlite3
 .env
-EOF
+
+# Virtual Environment
+venv/
+.venv/
+
+# macOS
+.DS_Store
